--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:oPAS02DW6cKSC7mlPRoT7QAP4xDfyQq4GWWNqR3FVpE=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://shr.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
